this seems to have fixed the iphone truncated map issue

--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -6,13 +6,13 @@ html {
   line-height: 1.4;
 }
 
-body {
-  //margin: auto;
-  margin: 0;
-  padding: 0;
-  //text-align: center;
-  //max-width: $page-width;
-}
+//body {
+//  //margin: auto;
+//  margin: 0;
+//  padding: 0;
+//  //text-align: center;
+//  //max-width: $page-width;
+//}
 
 //h1 {
 //  margin: 0 0 2rem;
